# ea_driver

./: .gitignore  README.md  pyproject.toml
examples/: battery_performance_test.py  battery_performance_test.yaml  el_complete.py  el_profile.py  el_profile.yaml  el_profile_6s.yaml  el_profile_6s_cc.yaml  el_profile_8s.yaml  psb_complete.py
resources/: Thumbs.db
src/ea_driver/: __init__.py  config.py  core.py  ea.py  modbus.py  scpi.py  verify.py
tests/: test_battery_performance_test.py  test_config.py  test_ea.py  test_el_examples.py  test_modbus.py  test_verify.py
